--- a/index.html
+++ b/index.html
@@ -170,12 +170,10 @@ details ul{margin:8px 0 18px 18px;font-size:15px;}
   <button onclick="drawCards(15)">抽 15 張</button>
 </div>
 
-<!-- 抽牌結果 -->
-<div id="result"></div>
-<button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
-
-<!-- 返回首頁 -->
-<a href="https://hourlight.github.io/" class="home-btn">🏠 返回首頁</a>
+<div class="button-stack">
+  <button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
+  <a href="https://hourlight.github.io/" class="home-btn">🏠 返回首頁</a>
+</div>
 
 <!-- JS -->
 <script>
