--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@ function drawCards(num) {
     if (!selectedCards.includes(n)) {
       selectedCards.push(n);
       const isReversed = Math.random() < 0.5;
-      cardStates.push(isReversed ? "逆位" : "正位");
+      cardStates.push(isReversed ? "逆" : "正");
     }
   }
 
   document.getElementById('result').innerHTML = selectedCards.map((c, i) => {
-    const orientationIcon = cardStates[i] === "逆位" ? "🌑" : "☀️";
+    const orientationIcon = cardStates[i] === "逆" ? "🌑" : "☀️";
     const orientationText = `${orientationIcon} ${cardStates[i]}`;
     const cardNumber = formatCardNumber(c);
     return `
