--- a/index.html
+++ b/index.html
@@ -6,35 +6,27 @@
 <link rel="icon" href="favicon.ico">
 
 <style>
-/* ───── 變數與全域 ───── */
 :root{--milk:#f9f5f0;--cocoa:#6b4f3e;--rose:#cda86e;--rose-dark:#a88257;}
 *{box-sizing:border-box;margin:0;padding:0}
 body{
     background:url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover fixed no-repeat;
     font-family:"Noto Sans TC","PingFang TC","Arial",sans-serif;
-    color:#333;text-align:center;              /* 讓 inline-block 標題置中 */
+    color:#333;text-align:center;
     padding:22px;
 }
-
-/* ───── 標題 3 行（白底跟字寬）───── */
-.main-title,
-.sub-title,
-.tagline{
-    display:block;                /* 每行獨立 */
-    width:fit-content;            /* 白底跟字寬 */
-    margin:0 auto 12px;           /* 置中 */
+.main-title,.sub-title,.tagline{
+    display:block;
+    width:fit-content;
+    margin:0 auto 12px;
     padding:10px 24px;
-    background:#ffffff;           /* 純白、不透明 */
+    background:#ffffff;
     border-radius:14px;
     box-shadow:0 4px 10px rgba(0,0,0,.18);
 }
-
-/* 個別字色/大小 (若已存在可忽略) */
 .main-title{font-size:2rem;color:#6b4f3e;}
 .sub-title {font-size:1.35rem;color:#cda86e;}
 .tagline   {font-size:1rem;color:#6b4f3e;max-width:880px;}
 
-/* ───── 按鈕 & 牌卡 ───── */
 button{
     background:var(--rose);color:#fff;border:none;padding:14px 28px;font-size:20px;
     margin:8px;border-radius:15px;cursor:pointer;
@@ -48,48 +40,10 @@ button:hover{background:var(--rose-dark);transform:translateY(-3px)}
     margin-top:10px;font-size:22px;font-weight:bold;
     background:rgba(255,255,255,.75);padding:6px 12px;border-radius:10px;
 }
-
-/* ───── 摺疊說明 ───── */
-details{border:1px solid #e4d6c8;border-radius:12px;margin:8px 0;
-    padding:0 14px;background:rgba(255,255,255,.88);box-shadow:0 2px 6px rgba(0,0,0,.07);}
-summary{cursor:pointer;list-style:none;font-weight:600;padding:14px 4px;color:var(--rose-dark);}
-summary::-webkit-details-marker{display:none;}
-details[open]{background:rgba(255,255,255,.97);}
-details ul{margin:8px 0 18px 18px;font-size:15px;}
-
-/* ───── 區塊外殼 ───── */
-.section{
-    max-width:880px;margin:36px auto;background:rgba(255,255,255,.9);
-    padding:24px;border-radius:16px;box-shadow:0 3px 10px rgba(0,0,0,.15);
-    line-height:1.75;font-size:18px;text-align:left;
+.card-container.reversed img {
+  transform: rotate(180deg);
+  transition: transform 0.6s ease;
 }
-.section h2{color:var(--cocoa);margin-bottom:12px;font-size:1.25rem;text-align:center}
-
-/* ───── 價格雙欄 ───── */
-.price-grid{
-    display:grid;grid-template-columns:1fr 1fr;gap:6px 14px;
-    max-width:420px;margin:6px auto;
-}
-.price-grid div{
-    background:var(--milk);border-radius:10px;padding:8px 12px;
-    box-shadow:0 2px 4px rgba(0,0,0,.08);
-}
-@media(max-width:550px){.price-grid{grid-template-columns:1fr}}
-
-/* ───── 返回首頁 ───── */
-.home-btn{
-    display:inline-block;background:var(--rose);color:#fff;padding:12px 28px;
-    text-decoration:none;border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.25);
-    transition:.3s;margin:34px auto 0;font-size:18px}
-.home-btn:hover{background:var(--rose-dark);transform:translateY(-3px)}
-
-/* ───── RWD 按鈕 ───── */
-@media(max-width:768px){
-    button,#copyBtn{width:94%;margin:10px auto;font-size:22px}
-    .card-container img{width:94%}
-    .section{padding:20px}
-}
-/* ───── 按鈕垂直堆疊樣式 ───── */
 .button-stack {
     display: flex;
     flex-direction: column;
@@ -97,80 +51,17 @@ details ul{margin:8px 0 18px 18px;font-size:15px;}
     gap: 16px;
     margin-top: 30px;
 }
-/* ───── 逆位圖片旋轉 ───── */
-.card-container.reversed img {
-  transform: rotate(180deg);
-  transition: transform 0.6s ease;
+@media(max-width:768px){
+    button,#copyBtn{width:94%;margin:10px auto;font-size:22px}
+    .card-container img{width:94%}
 }
 </style>
 </head>
 <body>
 
-<!-- 標題區 -->
 <h1 class="main-title">馥靈之鑰 Hour Light</h1>
 <h2 class="sub-title">靈性天使線上抽牌</h2>
 <p  class="tagline">130 張牌卡 × 130 位靈性天使 — H-O-U-R 四步快速對焦</p>
-
-<!-- 摺疊說明（七組牌陣，每組 5 點） -->
-<div class="section">
-  <h2>🔮 抽多少？看這裡</h2>
-
-  <details><summary>1 張｜即時訊息 × 快速對焦</summary>
-    <ul>
-      <li>我現在的情緒訊號？</li><li>今日關鍵提醒</li>
-      <li>身體的小聲告白</li><li>關係能量溫度計</li>
-      <li>顯化練習聚焦點</li>
-    </ul>
-  </details>
-
-  <details><summary>3 張｜過去・現在・未來 能量流</summary>
-    <ul>
-      <li>事件源頭 × 現況 × 走向</li><li>感情 / 職涯節拍</li>
-      <li>轉型卡點 & 轉機</li><li>信念變化檢測</li>
-      <li>身體症狀情緒根源</li>
-    </ul>
-  </details>
-
-  <details><summary>5 張｜卡點掃描 × 行動解方</summary>
-    <ul>
-      <li>金錢 / 關係卡住原因</li><li>下一步行動</li>
-      <li>人際衝突五面觀照</li><li>情緒五階段釋放</li>
-      <li>五行失衡快速診斷</li>
-    </ul>
-  </details>
-
-  <details><summary>7 張｜深層架構掃描</summary>
-    <ul>
-      <li>七脈輪能量平衡</li><li>情緒轉化七步驟</li>
-      <li>顯性 / 隱性動力</li><li>身心靈全盤檢視</li>
-      <li>靈性通道順暢度</li>
-    </ul>
-  </details>
-
-  <details><summary>9 張｜宇宙頻率地圖</summary>
-    <ul>
-      <li>靈魂 × 內在 × 外在</li><li>九宮格行動策展</li>
-      <li>靈魂地圖星象對照</li><li>內收 / 外放節奏</li>
-      <li>月運 & 季運趨勢</li>
-    </ul>
-  </details>
-
-  <details><summary>12 張｜年度規劃 × 能量重整</summary>
-    <ul>
-      <li>12 個月主題導航</li><li>12 面向平衡盤點</li>
-      <li>年度突破轉折</li><li>月亮週期追蹤</li>
-      <li>12 法則落地檢核</li>
-    </ul>
-  </details>
-
-  <details><summary>15 張｜登入靈魂藍圖 Ultimate</summary>
-    <ul>
-      <li>靈魂原型 × 核心功課</li><li>家族 / 前世殘影</li>
-      <li>天賦寶庫 × 盲點</li><li>高維祝福 × 行動清單</li>
-      <li>30-90 天整合路線</li>
-    </ul>
-  </details>
-</div>
 
 <!-- 抽牌按鈕 -->
 <div>
@@ -183,6 +74,10 @@ details ul{margin:8px 0 18px 18px;font-size:15px;}
   <button onclick="drawCards(15)">抽 15 張</button>
 </div>
 
+<!-- ✅ 抽牌結果顯示區 -->
+<div id="result" style="margin-top: 24px;"></div>
+
+<!-- 複製與返回 -->
 <div class="button-stack">
   <button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
   <a href="https://hourlight.github.io/" class="home-btn">🏠 返回首頁</a>
@@ -191,7 +86,7 @@ details ul{margin:8px 0 18px 18px;font-size:15px;}
 <!-- JS -->
 <script>
 let selectedCards = [];
-let cardStates = []; // 記錄每張卡是正位還是逆位
+let cardStates = [];
 
 function formatCardNumber(n) {
   return n <= 22 ? 'A' + (n - 1).toString().padStart(2, '0') : (n - 22).toString().padStart(3, '0');
@@ -213,10 +108,9 @@ function drawCards(num) {
 
   document.getElementById('result').innerHTML = selectedCards.map((c, i) => {
     const icon = cardStates[i] === "逆位" ? "🌑" : "☀️";
-    const label = `${icon} ${cardStates[i]}`; // ✅ 補上這行
-    const cardNumber = formatCardNumber(c);    // ✅ 補上這行
+    const label = `${icon} ${cardStates[i]}`;
+    const cardNumber = formatCardNumber(c);
     const reversedClass = cardStates[i] === "逆位" ? "reversed" : "";
-
     return `
       <div class="card-container ${reversedClass}">
         <img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${c}.jpg">
@@ -224,7 +118,6 @@ function drawCards(num) {
       </div>`;
   }).join('');
 }
-
 
 function copyResult() {
   if (!selectedCards.length) {
