--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>馥靈之鑰 Hour Light｜靈性天使線上抽牌</title>
 <link rel="icon" href="favicon.ico">
-
 <style>
 :root{--milk:#f9f5f0;--cocoa:#6b4f3e;--rose:#cda86e;--rose-dark:#a88257;}
 *{box-sizing:border-box;margin:0;padding:0}
@@ -15,18 +14,13 @@ body{
     padding:22px;
 }
 .main-title,.sub-title,.tagline{
-    display:block;
-    width:fit-content;
-    margin:0 auto 12px;
-    padding:10px 24px;
-    background:#ffffff;
-    border-radius:14px;
+    display:block;width:fit-content;margin:0 auto 12px;
+    padding:10px 24px;background:#ffffff;border-radius:14px;
     box-shadow:0 4px 10px rgba(0,0,0,.18);
 }
 .main-title{font-size:2rem;color:#6b4f3e;}
 .sub-title {font-size:1.35rem;color:#cda86e;}
 .tagline   {font-size:1rem;color:#6b4f3e;max-width:880px;}
-
 button{
     background:var(--rose);color:#fff;border:none;padding:14px 28px;font-size:20px;
     margin:8px;border-radius:15px;cursor:pointer;
@@ -51,10 +45,31 @@ button:hover{background:var(--rose-dark);transform:translateY(-3px)}
     gap: 16px;
     margin-top: 30px;
 }
+.home-btn{
+    display:inline-block;
+    background:#fff;color:var(--rose-dark);
+    border: 2px solid var(--rose-dark);
+    padding:12px 28px;text-decoration:none;
+    border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.25);
+    font-weight: bold;transition:.3s;
+}
+.home-btn:hover{background:var(--rose-dark);color:#fff;transform:translateY(-3px)}
 @media(max-width:768px){
     button,#copyBtn{width:94%;margin:10px auto;font-size:22px}
     .card-container img{width:94%}
 }
+.section{
+    max-width:880px;margin:36px auto;background:rgba(255,255,255,.9);
+    padding:24px;border-radius:16px;box-shadow:0 3px 10px rgba(0,0,0,.15);
+    line-height:1.75;font-size:18px;text-align:left;
+}
+.section h2{color:var(--cocoa);margin-bottom:12px;font-size:1.25rem;text-align:center}
+details{border:1px solid #e4d6c8;border-radius:12px;margin:8px 0;
+    padding:0 14px;background:rgba(255,255,255,.88);box-shadow:0 2px 6px rgba(0,0,0,.07);}
+summary{cursor:pointer;list-style:none;font-weight:600;padding:14px 4px;color:var(--rose-dark);}
+summary::-webkit-details-marker{display:none;}
+details[open]{background:rgba(255,255,255,.97);}
+details ul{margin:8px 0 18px 18px;font-size:15px;}
 </style>
 </head>
 <body>
@@ -63,6 +78,65 @@ button:hover{background:var(--rose-dark);transform:translateY(-3px)}
 <h2 class="sub-title">靈性天使線上抽牌</h2>
 <p  class="tagline">130 張牌卡 × 130 位靈性天使 — H-O-U-R 四步快速對焦</p>
 
+<div class="section">
+  <h2>🔮 抽多少？看這裡</h2>
+
+  <details><summary>1 張｜即時訊息 × 快速對焦</summary>
+    <ul>
+      <li>我現在的情緒訊號？</li><li>今日關鍵提醒</li>
+      <li>身體的小聲告白</li><li>關係能量溫度計</li>
+      <li>顯化練習聚焦點</li>
+    </ul>
+  </details>
+
+  <details><summary>3 張｜過去・現在・未來 能量流</summary>
+    <ul>
+      <li>事件源頭 × 現況 × 走向</li><li>感情 / 職涯節拍</li>
+      <li>轉型卡點 & 轉機</li><li>信念變化檢測</li>
+      <li>身體症狀情緒根源</li>
+    </ul>
+  </details>
+
+  <details><summary>5 張｜卡點掃描 × 行動解方</summary>
+    <ul>
+      <li>金錢 / 關係卡住原因</li><li>下一步行動</li>
+      <li>人際衝突五面觀照</li><li>情緒五階段釋放</li>
+      <li>五行失衡快速診斷</li>
+    </ul>
+  </details>
+
+  <details><summary>7 張｜深層架構掃描</summary>
+    <ul>
+      <li>七脈輪能量平衡</li><li>情緒轉化七步驟</li>
+      <li>顯性 / 隱性動力</li><li>身心靈全盤檢視</li>
+      <li>靈性通道順暢度</li>
+    </ul>
+  </details>
+
+  <details><summary>9 張｜宇宙頻率地圖</summary>
+    <ul>
+      <li>靈魂 × 內在 × 外在</li><li>九宮格行動策展</li>
+      <li>靈魂地圖星象對照</li><li>內收 / 外放節奏</li>
+      <li>月運 & 季運趨勢</li>
+    </ul>
+  </details>
+
+  <details><summary>12 張｜年度規劃 × 能量重整</summary>
+    <ul>
+      <li>12 個月主題導航</li><li>12 面向平衡盤點</li>
+      <li>年度突破轉折</li><li>月亮週期追蹤</li>
+      <li>12 法則落地檢核</li>
+    </ul>
+  </details>
+
+  <details><summary>15 張｜登入靈魂藍圖 Ultimate</summary>
+    <ul>
+      <li>靈魂原型 × 核心功課</li><li>家族 / 前世殘影</li>
+      <li>天賦寶庫 × 盲點</li><li>高維祝福 × 行動清單</li>
+      <li>30-90 天整合路線</li>
+    </ul>
+  </details>
+</div>
 <!-- 抽牌按鈕 -->
 <div>
   <button onclick="drawCards(1)">抽 1 張</button>
@@ -74,7 +148,7 @@ button:hover{background:var(--rose-dark);transform:translateY(-3px)}
   <button onclick="drawCards(15)">抽 15 張</button>
 </div>
 
-<!-- ✅ 抽牌結果顯示區 -->
+<!-- 抽牌結果顯示區 -->
 <div id="result" style="margin-top: 24px;"></div>
 
 <!-- 複製與返回 -->
@@ -117,6 +191,9 @@ function drawCards(num) {
         <div class="card-number">編號：${cardNumber}（${label}）</div>
       </div>`;
   }).join('');
+
+  // 自動滑動到結果區
+  document.getElementById('result').scrollIntoView({ behavior: 'smooth' });
 }
 
 function copyResult() {
