--- a/index.html
+++ b/index.html
@@ -161,6 +161,138 @@ details ul{margin:8px 0 18px 18px;font-size:15px;}
 <script>
 let selectedCards = [];
 let cardStates = [];
+const cardNames = {
+  "A00": "神聖啟程",
+  "A01": "魔法顯化",
+  "A02": "靈性覺醒",
+  "A03": "豐盛女神",
+  "A04": "王者權威",
+  "A05": "神聖智慧",
+  "A06": "靈魂契約",
+  "A07": "勝利前行",
+  "A08": "內在力量",
+  "A09": "深度探索",
+  "A10": "命運轉輪",
+  "A11": "因果平衡",
+  "A12": "視界重塑",
+  "A13": "新生蛻變",
+  "A14": "靈魂平衡",
+  "A15": "破除執念",
+  "A16": "重生轉化",
+  "A17": "星辰希望",
+  "A18": "月光洞見",
+  "A19": "耀眼光明",
+  "A20": "靈性覺知",
+  "A21": "圓滿成就",
+  "001": "古巴香脂",
+  "002": "薄荷",
+  "003": "黑胡椒",
+  "004": "綠花白千層",
+  "005": "羅勒",
+  "006": "檸檬",
+  "007": "冬青",
+  "008": "牛至(野馬鬱蘭)",
+  "009": "沉香醇百里香",
+  "010": "聖羅勒",
+  "011": "夏香草",
+  "012": "羅馬洋甘菊",
+  "013": "胡椒薄荷",
+  "014": "葡萄柚",
+  "015": "茶樹",
+  "016": "薑黃",
+  "017": "肉豆蔻",
+  "018": "沒藥",
+  "019": "甜馬鬱蘭",
+  "020": "鼠尾草",
+  "021": "歐芹葉",
+  "022": "玫瑰草",
+  "023": "藍艾菊",
+  "024": "歐洲赤松",
+  "025": "丁香花苞",
+  "026": "雅麗菊",
+  "027": "岩蘭草",
+  "028": "檸檬草",
+  "029": "廣藿香",
+  "030": "甜茴香",
+  "031": "茉莉",
+  "032": "冷杉",
+  "033": "黑雲杉",
+  "034": "香草",
+  "035": "印度檀香木",
+  "036": "西洋蓍草",
+  "037": "苦橙葉",
+  "038": "馬鞭草",
+  "039": "天竺葵",
+  "040": "芹菜籽",
+  "041": "杜松漿果",
+  "042": "香蜂草",
+  "043": "藍膠尤加利",
+  "044": "迷迭香",
+  "045": "芳璋",
+  "046": "阿米香樹",
+  "047": "蘇剛達",
+  "048": "快樂鼠尾草",
+  "049": "山雞椒",
+  "050": "佛手柑",
+  "051": "辣椒",
+  "052": "麥盧卡",
+  "053": "乳香",
+  "054": "真正薰衣草",
+  "055": "玫瑰",
+  "056": "永久花",
+  "057": "甜橙",
+  "058": "胡荽",
+  "059": "依蘭依蘭",
+  "060": "絲柏",
+  "061": "雪松",
+  "062": "花梨木",
+  "063": "萊姆",
+  "064": "檜木",
+  "065": "薑",
+  "066": "粉紅胡椒",
+  "067": "岩玫瑰",
+  "068": "肉桂",
+  "069": "聖木",
+  "070": "桂花樹",
+  "071": "德國洋甘菊",
+  "072": "聖約翰草",
+  "073": "百里酚百里香",
+  "074": "穗甘松",
+  "075": "歐白芷根",
+  "076": "當歸",
+  "077": "川芎",
+  "078": "羅文莎葉",
+  "079": "癒創木",
+  "080": "白松香",
+  "081": "銀松",
+  "082": "胡荽籽",
+  "083": "樺樹",
+  "084": "藏茴香",
+  "085": "桉油樟",
+  "086": "荳蔻",
+  "087": "白千層",
+  "088": "薄荷",
+  "089": "歐白芷籽",
+  "090": "檸檬尤加利",
+  "091": "椰子油",
+  "092": "玫瑰果",
+  "093": "瓊崖海棠",
+  "094": "沙棘果籽",
+  "095": "向日葵",
+  "096": "曙光守護",
+  "097": "靈性錨定",
+  "098": "深層舒緩",
+  "099": "極境森語",
+  "100": "舒心樂活",
+  "101": "沐心安然",
+  "102": "豐盛之源",
+  "103": "女神甦醒",
+  "104": "清逸之息",
+  "105": "時光之顏",
+  "106": "橙光律動",
+  "107": "淨界之門",
+  "108": "馨悅之境"
+};
 
 function formatCardNumber(n) {
   return n <= 22 ? 'A' + (n - 1).toString().padStart(2, '0') : (n - 22).toString().padStart(3, '0');
@@ -186,12 +318,13 @@ function drawCards(num) {
     const icon = cardStates[i] === "逆位" ? "🌑" : "☀️";
     const label = `${icon} ${cardStates[i]}`;
     const cardNumber = formatCardNumber(c);
+    const cardName = cardNames[cardNumber] || `編號：${cardNumber}`; // ✅ 中文名稱
     const reversedClass = cardStates[i] === "逆位" ? "reversed" : "";
 
     return `
       <div class="card-container ${reversedClass}">
         <img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${c}.jpg">
-        <div class="card-number">編號：${cardNumber}（${label}）</div>
+        <div class="card-number">${cardName}（${label}）</div>
       </div>`;
   }).join('');
 
@@ -223,14 +356,16 @@ function copyResult() {
 
   const resultText = selectedCards.map((c, i) => {
     const cardNumber = formatCardNumber(c);
+    const cardName = cardNames[cardNumber] || '';
     const state = cardStates[i];
-    return `${cardNumber}（${state}）`;
+    return `${cardNumber} ${cardName}（${state}）`;
   }).join(', ');
 
   navigator.clipboard.writeText(resultText)
     .then(() => alert('已複製：' + resultText))
     .catch(() => alert('複製失敗，請手動複製：' + resultText));
 }
+
 </script>
 </body>
 </html>
