--- a/index.html
+++ b/index.html
@@ -5,97 +5,186 @@
 <title>馥靈之鑰 Hour Light｜靈性天使線上抽牌</title>
 <link rel="icon" href="favicon.ico">
 <style>
-:root{--milk:#f9f5f0;--cocoa:#6b4f3e;--rose:#cda86e;--rose-dark:#a88257;}
-*{box-sizing:border-box;margin:0;padding:0}
-body{
-    background:url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover fixed no-repeat;
-    font-family:"Noto Sans TC","PingFang TC","Arial",sans-serif;
-    color:#333;text-align:center;
-    padding:22px;
+:root {
+  --milk: #f9f5f0;
+  --cocoa: #6b4f3e;
+  --rose: #cda86e;
+  --rose-dark: #a88257;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover fixed no-repeat;
+  font-family: "Noto Sans TC", "PingFang TC", "Arial", sans-serif;
+  color: #333;
+  text-align: center;
+  padding: 22px;
+}
+
+/* 🌟 三行標題（清透玻璃感＋焦糖字） */
 .main-title, .sub-title, .tagline {
   display: block;
   width: fit-content;
   margin: 0 auto 12px;
   padding: 14px 28px;
   border-radius: 18px;
-  background: rgba(255, 240, 245, 0.68); /* 淡粉半透明底 */
-  border: 1.5px solid rgba(221, 182, 200, 0.55); /* 玫瑰粉邊線 */
-  box-shadow:
-    0 4px 12px rgba(230, 180, 200, 0.2),
-    0 0 0 2px rgba(255, 230, 240, 0.4),
-    inset 0 0 8px rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
-  position: relative;
-  overflow: hidden;
+  background: rgba(255, 255, 255, 0.45);
+  border: 1px solid rgba(210, 190, 160, 0.3);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
 }
 
-/* ✨ 花影點綴（加在標題內） */
-.main-title::after, .sub-title::after, .tagline::after {
-  content: "";
-  position: absolute;
-  top: -20px;
-  right: -30px;
-  width: 120px;
-  height: 120px;
-  background: url('https://i.imgur.com/gz0ufrG.png') no-repeat center/contain;
-  opacity: 0.15;
-  transform: rotate(18deg);
-  pointer-events: none;
+.main-title {
+  font-size: 2rem;
+  color: var(--cocoa);
 }
-.main-title{font-size:2rem;color:#6b4f3e;}
-.sub-title {font-size:1.35rem;color:#cda86e;}
-.tagline   {font-size:1rem;color:#6b4f3e;max-width:880px;}
-button{
-    background:var(--rose);color:#fff;border:none;padding:14px 28px;font-size:20px;
-    margin:8px;border-radius:15px;cursor:pointer;
-    box-shadow:0 3px 8px rgba(0,0,0,.25);transition:.3s;
+
+.sub-title {
+  font-size: 1.35rem;
+  color: var(--rose);
 }
-button:hover{background:var(--rose-dark);transform:translateY(-3px)}
-#copyBtn{background:var(--cocoa)}
-.card-container{display:inline-block;margin:16px}
-.card-container img{width:220px;border-radius:15px;box-shadow:0 0 12px rgba(0,0,0,.35)}
-.card-number{
-    margin-top:10px;font-size:22px;font-weight:bold;
-    background:rgba(255,255,255,.75);padding:6px 12px;border-radius:10px;
+
+.tagline {
+  font-size: 1rem;
+  color: var(--cocoa);
+  max-width: 880px;
+}
+
+/* 🧿 按鈕區 */
+button {
+  background: var(--rose);
+  color: #fff;
+  border: none;
+  padding: 14px 28px;
+  font-size: 20px;
+  margin: 8px;
+  border-radius: 15px;
+  cursor: pointer;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.25);
+  transition: 0.3s;
+}
+button:hover {
+  background: var(--rose-dark);
+  transform: translateY(-3px);
+}
+#copyBtn {
+  background: var(--cocoa);
+}
+
+/* 🖼️ 抽到的卡片 */
+.card-container {
+  display: inline-block;
+  margin: 16px;
+}
+.card-container img {
+  width: 220px;
+  border-radius: 15px;
+  box-shadow: 0 0 12px rgba(0,0,0,0.35);
+}
+.card-number {
+  margin-top: 10px;
+  font-size: 22px;
+  font-weight: bold;
+  background: rgba(255,255,255,0.75);
+  padding: 6px 12px;
+  border-radius: 10px;
 }
 .card-container.reversed img {
   transform: rotate(180deg);
   transition: transform 0.6s ease;
 }
+
+/* 📦 按鈕區上下堆疊 */
 .button-stack {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
-    margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  margin-top: 30px;
 }
-.home-btn{
-    display:inline-block;
-    background:#fff;color:var(--rose-dark);
-    border: 2px solid var(--rose-dark);
-    padding:12px 28px;text-decoration:none;
-    border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.25);
-    font-weight: bold;transition:.3s;
+
+/* 🏠 回首頁 */
+.home-btn {
+  display: inline-block;
+  background: #fff;
+  color: var(--rose-dark);
+  border: 2px solid var(--rose-dark);
+  padding: 12px 28px;
+  text-decoration: none;
+  border-radius: 12px;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.25);
+  font-weight: bold;
+  transition: 0.3s;
 }
-.home-btn:hover{background:var(--rose-dark);color:#fff;transform:translateY(-3px)}
-@media(max-width:768px){
-    button,#copyBtn{width:94%;margin:10px auto;font-size:22px}
-    .card-container img{width:94%}
+.home-btn:hover {
+  background: var(--rose-dark);
+  color: #fff;
+  transform: translateY(-3px);
 }
-.section{
-    max-width:880px;margin:36px auto;background:rgba(255,255,255,.9);
-    padding:24px;border-radius:16px;box-shadow:0 3px 10px rgba(0,0,0,.15);
-    line-height:1.75;font-size:18px;text-align:left;
+
+/* 📱 RWD */
+@media (max-width: 768px) {
+  button, #copyBtn {
+    width: 94%;
+    margin: 10px auto;
+    font-size: 22px;
+  }
+  .card-container img {
+    width: 94%;
+  }
 }
-.section h2{color:var(--cocoa);margin-bottom:12px;font-size:1.25rem;text-align:center}
-details{border:1px solid #e4d6c8;border-radius:12px;margin:8px 0;
-    padding:0 14px;background:rgba(255,255,255,.88);box-shadow:0 2px 6px rgba(0,0,0,.07);}
-summary{cursor:pointer;list-style:none;font-weight:600;padding:14px 4px;color:var(--rose-dark);}
-summary::-webkit-details-marker{display:none;}
-details[open]{background:rgba(255,255,255,.97);}
-details ul{margin:8px 0 18px 18px;font-size:15px;}
+
+/* 📖 摺疊區塊說明 */
+.section {
+  max-width: 880px;
+  margin: 36px auto;
+  background: rgba(255,255,255,0.9);
+  padding: 24px;
+  border-radius: 16px;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+  line-height: 1.75;
+  font-size: 18px;
+  text-align: left;
+}
+.section h2 {
+  color: var(--cocoa);
+  margin-bottom: 12px;
+  font-size: 1.25rem;
+  text-align: center;
+}
+details {
+  border: 1px solid #e4d6c8;
+  border-radius: 12px;
+  margin: 8px 0;
+  padding: 0 14px;
+  background: rgba(255,255,255,0.88);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.07);
+}
+summary {
+  cursor: pointer;
+  list-style: none;
+  font-weight: 600;
+  padding: 14px 4px;
+  color: var(--rose-dark);
+}
+summary::-webkit-details-marker {
+  display: none;
+}
+details[open] {
+  background: rgba(255,255,255,0.97);
+}
+details ul {
+  margin: 8px 0 18px 18px;
+  font-size: 15px;
+}
 </style>
+
 </head>
 <body>
 
