--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>馥靈之鑰 Hour Light｜靈性天使線上抽牌</title>
+<title>馥靈之鑰 Hour Light｜情緒共振線上抽牌</title>
 <link rel="icon" href="favicon.ico">
 <style>
 :root {
