--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ details ul {
 <body>
 
 <h1 class="main-title">馥靈之鑰 Hour Light</h1>
-<h2 class="sub-title">靈性天使線上抽牌</h2>
-<p  class="tagline">130 張牌卡 × 130 位靈性天使 — H-O-U-R 四步快速對焦</p>
+<h2 class="sub-title">情緒共振線上抽牌</h2>
+<p  class="tagline">130 張牌卡 × 情緒覺察 — H-O-U-R 四步快速對焦</p>
 
 <div class="section">
   <h2>🔮 抽多少？看這裡</h2>
