--- a/index.html
+++ b/index.html
@@ -2,196 +2,103 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>馥靈之鑰 Hour Light｜情緒共振線上抽牌</title>
+<title>馥靈之鑰 Hour Light｜靈性天使線上抽牌</title>
 <link rel="icon" href="favicon.ico">
+
 <style>
-:root {
-  --milk: #f9f5f0;
-  --cocoa: #6b4f3e;
-  --rose: #cda86e;
-  --rose-dark: #a88257;
+/* ───── 變數與全域 ───── */
+:root{--milk:#f9f5f0;--cocoa:#6b4f3e;--rose:#cda86e;--rose-dark:#a88257;}
+*{box-sizing:border-box;margin:0;padding:0}
+body{
+    background:url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover fixed no-repeat;
+    font-family:"Noto Sans TC","PingFang TC","Arial",sans-serif;
+    color:#333;text-align:center;              /* 讓 inline-block 標題置中 */
+    padding:22px;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+/* ───── 標題 3 行（白底跟字寬）───── */
+.main-title,
+.sub-title,
+.tagline{
+    display:block;                /* 每行獨立 */
+    width:fit-content;            /* 白底跟字寬 */
+    margin:0 auto 12px;           /* 置中 */
+    padding:10px 24px;
+    background:#ffffff;           /* 純白、不透明 */
+    border-radius:14px;
+    box-shadow:0 4px 10px rgba(0,0,0,.18);
 }
 
-body {
-  background: url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover fixed no-repeat;
-  font-family: "Noto Sans TC", "PingFang TC", "Arial", sans-serif;
-  color: #333;
-  text-align: center;
-  padding: 22px;
+/* 個別字色/大小 (若已存在可忽略) */
+.main-title{font-size:2rem;color:#6b4f3e;}
+.sub-title {font-size:1.35rem;color:#cda86e;}
+.tagline   {font-size:1rem;color:#6b4f3e;max-width:880px;}
+
+/* ───── 按鈕 & 牌卡 ───── */
+button{
+    background:var(--rose);color:#fff;border:none;padding:14px 28px;font-size:20px;
+    margin:8px;border-radius:15px;cursor:pointer;
+    box-shadow:0 3px 8px rgba(0,0,0,.25);transition:.3s;
+}
+button:hover{background:var(--rose-dark);transform:translateY(-3px)}
+#copyBtn{background:var(--cocoa)}
+.card-container{display:inline-block;margin:16px}
+.card-container img{width:220px;border-radius:15px;box-shadow:0 0 12px rgba(0,0,0,.35)}
+.card-number{
+    margin-top:10px;font-size:22px;font-weight:bold;
+    background:rgba(255,255,255,.75);padding:6px 12px;border-radius:10px;
 }
 
-/* 🌟 三行標題（清透玻璃感＋焦糖字） */
-.main-title, .sub-title, .tagline {
-  display: block;
-  width: fit-content;
-  margin: 0 auto 12px;
-  padding: 14px 28px;
-  border-radius: 18px;
-  background: rgba(255, 255, 255, 0.45);
-  border: 1px solid rgba(210, 190, 160, 0.3);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-}
+/* ───── 摺疊說明 ───── */
+details{border:1px solid #e4d6c8;border-radius:12px;margin:8px 0;
+    padding:0 14px;background:rgba(255,255,255,.88);box-shadow:0 2px 6px rgba(0,0,0,.07);}
+summary{cursor:pointer;list-style:none;font-weight:600;padding:14px 4px;color:var(--rose-dark);}
+summary::-webkit-details-marker{display:none;}
+details[open]{background:rgba(255,255,255,.97);}
+details ul{margin:8px 0 18px 18px;font-size:15px;}
 
-.main-title {
-  font-size: 2rem;
-  color: var(--cocoa);
+/* ───── 區塊外殼 ───── */
+.section{
+    max-width:880px;margin:36px auto;background:rgba(255,255,255,.9);
+    padding:24px;border-radius:16px;box-shadow:0 3px 10px rgba(0,0,0,.15);
+    line-height:1.75;font-size:18px;text-align:left;
 }
+.section h2{color:var(--cocoa);margin-bottom:12px;font-size:1.25rem;text-align:center}
 
-.sub-title {
-  font-size: 1.35rem;
-  color: var(--rose);
+/* ───── 價格雙欄 ───── */
+.price-grid{
+    display:grid;grid-template-columns:1fr 1fr;gap:6px 14px;
+    max-width:420px;margin:6px auto;
 }
+.price-grid div{
+    background:var(--milk);border-radius:10px;padding:8px 12px;
+    box-shadow:0 2px 4px rgba(0,0,0,.08);
+}
+@media(max-width:550px){.price-grid{grid-template-columns:1fr}}
 
-.tagline {
-  font-size: 1rem;
-  color: var(--cocoa);
-  max-width: 880px;
-}
+/* ───── 返回首頁 ───── */
+.home-btn{
+    display:inline-block;background:var(--rose);color:#fff;padding:12px 28px;
+    text-decoration:none;border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.25);
+    transition:.3s;margin:34px auto 0;font-size:18px}
+.home-btn:hover{background:var(--rose-dark);transform:translateY(-3px)}
 
-/* 🧿 按鈕區 */
-button {
-  background: var(--rose);
-  color: #fff;
-  border: none;
-  padding: 14px 28px;
-  font-size: 20px;
-  margin: 8px;
-  border-radius: 15px;
-  cursor: pointer;
-  box-shadow: 0 3px 8px rgba(0,0,0,0.25);
-  transition: 0.3s;
-}
-button:hover {
-  background: var(--rose-dark);
-  transform: translateY(-3px);
-}
-#copyBtn {
-  background: var(--cocoa);
-}
-
-/* 🖼️ 抽到的卡片 */
-.card-container {
-  display: inline-block;
-  margin: 16px;
-}
-.card-container img {
-  width: 220px;
-  border-radius: 15px;
-  box-shadow: 0 0 12px rgba(0,0,0,0.35);
-}
-.card-number {
-  margin-top: 10px;
-  font-size: 22px;
-  font-weight: bold;
-  background: rgba(255,255,255,0.75);
-  padding: 6px 12px;
-  border-radius: 10px;
-}
-.card-container.reversed img {
-  transform: rotate(180deg);
-  transition: transform 0.6s ease;
-}
-
-/* 📦 按鈕區上下堆疊 */
-.button-stack {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 16px;
-  margin-top: 30px;
-}
-
-/* 🏠 回首頁 */
-.home-btn {
-  display: inline-block;
-  background: #fff;
-  color: var(--rose-dark);
-  border: 2px solid var(--rose-dark);
-  padding: 12px 28px;
-  text-decoration: none;
-  border-radius: 12px;
-  box-shadow: 0 3px 8px rgba(0,0,0,0.25);
-  font-weight: bold;
-  transition: 0.3s;
-}
-.home-btn:hover {
-  background: var(--rose-dark);
-  color: #fff;
-  transform: translateY(-3px);
-}
-
-/* 📱 RWD */
-@media (max-width: 768px) {
-  button, #copyBtn {
-    width: 94%;
-    margin: 10px auto;
-    font-size: 22px;
-  }
-  .card-container img {
-    width: 94%;
-  }
-}
-
-/* 📖 摺疊區塊說明 */
-.section {
-  max-width: 880px;
-  margin: 36px auto;
-  background: rgba(255,255,255,0.9);
-  padding: 24px;
-  border-radius: 16px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.15);
-  line-height: 1.75;
-  font-size: 18px;
-  text-align: left;
-}
-.section h2 {
-  color: var(--cocoa);
-  margin-bottom: 12px;
-  font-size: 1.25rem;
-  text-align: center;
-}
-details {
-  border: 1px solid #e4d6c8;
-  border-radius: 12px;
-  margin: 8px 0;
-  padding: 0 14px;
-  background: rgba(255,255,255,0.88);
-  box-shadow: 0 2px 6px rgba(0,0,0,0.07);
-}
-summary {
-  cursor: pointer;
-  list-style: none;
-  font-weight: 600;
-  padding: 14px 4px;
-  color: var(--rose-dark);
-}
-summary::-webkit-details-marker {
-  display: none;
-}
-details[open] {
-  background: rgba(255,255,255,0.97);
-}
-details ul {
-  margin: 8px 0 18px 18px;
-  font-size: 15px;
+/* ───── RWD 按鈕 ───── */
+@media(max-width:768px){
+    button,#copyBtn{width:94%;margin:10px auto;font-size:22px}
+    .card-container img{width:94%}
+    .section{padding:20px}
 }
 </style>
-
 </head>
 <body>
 
+<!-- 標題區 -->
 <h1 class="main-title">馥靈之鑰 Hour Light</h1>
-<h2 class="sub-title">情緒共振線上抽牌</h2>
-<p  class="tagline">130 張牌卡 × 情緒覺察 — H-O-U-R 四步快速對焦</p>
+<h2 class="sub-title">靈性天使線上抽牌</h2>
+<p  class="tagline">130 張牌卡 × 130 位靈性天使 — H-O-U-R 四步快速對焦</p>
 
+<!-- 摺疊說明（七組牌陣，每組 5 點） -->
 <div class="section">
   <h2>🔮 抽多少？看這裡</h2>
 
@@ -251,6 +158,7 @@ details ul {
     </ul>
   </details>
 </div>
+
 <!-- 抽牌按鈕 -->
 <div>
   <button onclick="drawCards(1)">抽 1 張</button>
@@ -262,224 +170,35 @@ details ul {
   <button onclick="drawCards(15)">抽 15 張</button>
 </div>
 
-<!-- 抽牌結果顯示區 -->
-<div id="result" style="margin-top: 24px;"></div>
+<!-- 抽牌結果 -->
+<div id="result"></div>
+<button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
 
-<!-- 複製與返回 -->
-<div class="button-stack">
-  <button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
-  <a href="https://hourlight.github.io/" class="home-btn">🏠 返回首頁</a>
-</div>
+<!-- 返回首頁 -->
+<a href="https://hourlight.github.io/" class="home-btn">🏠 返回首頁</a>
 
 <!-- JS -->
 <script>
-let selectedCards = [];
-let cardStates = [];
-const cardNames = {
-  "A00": "神聖啟程",
-  "A01": "魔法顯化",
-  "A02": "靈性覺醒",
-  "A03": "豐盛女神",
-  "A04": "王者權威",
-  "A05": "神聖智慧",
-  "A06": "靈魂契約",
-  "A07": "勝利前行",
-  "A08": "內在力量",
-  "A09": "深度探索",
-  "A10": "命運轉輪",
-  "A11": "因果平衡",
-  "A12": "視界重塑",
-  "A13": "新生蛻變",
-  "A14": "靈魂平衡",
-  "A15": "破除執念",
-  "A16": "重生轉化",
-  "A17": "星辰希望",
-  "A18": "月光洞見",
-  "A19": "耀眼光明",
-  "A20": "靈性覺知",
-  "A21": "圓滿成就",
-  "001": "古巴香脂",
-  "002": "薄荷",
-  "003": "黑胡椒",
-  "004": "綠花白千層",
-  "005": "羅勒",
-  "006": "檸檬",
-  "007": "冬青",
-  "008": "牛至(野馬鬱蘭)",
-  "009": "沉香醇百里香",
-  "010": "聖羅勒",
-  "011": "夏香草",
-  "012": "羅馬洋甘菊",
-  "013": "胡椒薄荷",
-  "014": "葡萄柚",
-  "015": "茶樹",
-  "016": "薑黃",
-  "017": "肉豆蔻",
-  "018": "沒藥",
-  "019": "甜馬鬱蘭",
-  "020": "鼠尾草",
-  "021": "歐芹葉",
-  "022": "玫瑰草",
-  "023": "藍艾菊",
-  "024": "歐洲赤松",
-  "025": "丁香花苞",
-  "026": "雅麗菊",
-  "027": "岩蘭草",
-  "028": "檸檬草",
-  "029": "廣藿香",
-  "030": "甜茴香",
-  "031": "茉莉",
-  "032": "冷杉",
-  "033": "黑雲杉",
-  "034": "香草",
-  "035": "印度檀香木",
-  "036": "西洋蓍草",
-  "037": "苦橙葉",
-  "038": "馬鞭草",
-  "039": "天竺葵",
-  "040": "芹菜籽",
-  "041": "杜松漿果",
-  "042": "香蜂草",
-  "043": "藍膠尤加利",
-  "044": "迷迭香",
-  "045": "芳璋",
-  "046": "阿米香樹",
-  "047": "蘇剛達",
-  "048": "快樂鼠尾草",
-  "049": "山雞椒",
-  "050": "佛手柑",
-  "051": "辣椒",
-  "052": "麥盧卡",
-  "053": "乳香",
-  "054": "真正薰衣草",
-  "055": "玫瑰",
-  "056": "永久花",
-  "057": "甜橙",
-  "058": "胡荽",
-  "059": "依蘭依蘭",
-  "060": "絲柏",
-  "061": "雪松",
-  "062": "花梨木",
-  "063": "萊姆",
-  "064": "檜木",
-  "065": "薑",
-  "066": "粉紅胡椒",
-  "067": "岩玫瑰",
-  "068": "肉桂",
-  "069": "聖木",
-  "070": "桂花樹",
-  "071": "德國洋甘菊",
-  "072": "聖約翰草",
-  "073": "百里酚百里香",
-  "074": "穗甘松",
-  "075": "歐白芷根",
-  "076": "當歸",
-  "077": "川芎",
-  "078": "羅文莎葉",
-  "079": "癒創木",
-  "080": "白松香",
-  "081": "銀松",
-  "082": "胡荽籽",
-  "083": "樺樹",
-  "084": "藏茴香",
-  "085": "桉油樟",
-  "086": "荳蔻",
-  "087": "白千層",
-  "088": "薄荷",
-  "089": "歐白芷籽",
-  "090": "檸檬尤加利",
-  "091": "椰子油",
-  "092": "玫瑰果",
-  "093": "瓊崖海棠",
-  "094": "沙棘果籽",
-  "095": "向日葵",
-  "096": "曙光守護",
-  "097": "靈性錨定",
-  "098": "深層舒緩",
-  "099": "極境森語",
-  "100": "舒心樂活",
-  "101": "沐心安然",
-  "102": "豐盛之源",
-  "103": "女神甦醒",
-  "104": "清逸之息",
-  "105": "時光之顏",
-  "106": "橙光律動",
-  "107": "淨界之門",
-  "108": "馨悅之境"
-};
-
-function formatCardNumber(n) {
-  return n <= 22 ? 'A' + (n - 1).toString().padStart(2, '0') : (n - 22).toString().padStart(3, '0');
-}
-
-function drawCards(num) {
+let selectedCards=[];
+function formatCardNumber(n){return n<=22?'A'+(n-1).toString().padStart(2,'0'):(n-22).toString().padStart(3,'0');}
+function drawCards(num){
   alert("請閉眼深呼吸，心裡默念問題，再點確認。");
-  selectedCards = [];
-  cardStates = [];
-
-  const allowReversed = [1, 3, 5].includes(num); // ✅ 只有這些開啟逆位
-
-  while (selectedCards.length < num) {
-    const n = Math.floor(Math.random() * 130) + 1;
-    if (!selectedCards.includes(n)) {
-      selectedCards.push(n);
-      const isReversed = allowReversed && Math.random() < 0.5;
-      cardStates.push(isReversed ? "逆位" : "正位");
-    }
-  }
-
-  let resultHTML = selectedCards.map((c, i) => {
-    const icon = cardStates[i] === "逆位" ? "🌑" : "☀️";
-    const label = `${icon} ${cardStates[i]}`;
-    const cardNumber = formatCardNumber(c);
-    const cardName = cardNames[cardNumber] || `編號：${cardNumber}`; // ✅ 中文名稱
-    const reversedClass = cardStates[i] === "逆位" ? "reversed" : "";
-
-    return `
-      <div class="card-container ${reversedClass}">
+  selectedCards=[];
+  while(selectedCards.length<num){
+      const n=Math.floor(Math.random()*130)+1;
+      if(!selectedCards.includes(n))selectedCards.push(n);}
+  document.getElementById('result').innerHTML=selectedCards.map(c=>
+      <div class="card-container">
         <img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${c}.jpg">
-        <div class="card-number">${cardName}（${label}）</div>
-      </div>`;
-  }).join('');
-
-  // ✅ 自動計算逆位張數
-  const reversedCount = cardStates.filter(state => state === "逆位").length;
-
-  // ✅ 若有逆位，顯示溫柔提醒
-  if (reversedCount > 0) {
-    resultHTML += `
-      <div style="max-width:760px;margin:24px auto 0;background:rgba(255,255,255,0.88);padding:18px;border-radius:14px;line-height:1.8;text-align:left;font-size:16px;border:1px solid #ddd;">
-        <strong>💡 頻率提醒：</strong><br>
-        你這次抽出了 <strong>${reversedCount} 張逆位牌</strong>，這不是壞事，也不是錯誤。<br><br>
-        這些頻率正在你生命中出現，但可能尚未整合完成。<br>
-        它們代表的是你「正在經歷中但還未熟悉的能量」。請不要急著採取行動，而是靜心覺察，看看最近是否有情緒、身體、決策上的遲滯或卡點。<br><br>
-        🌿 頻率不是好壞，而是流動與否。讓這些提醒成為你的內在指引。
-      </div>
-    `;
-  }
-
-  document.getElementById('result').innerHTML = resultHTML;
-  document.getElementById('result').scrollIntoView({ behavior: 'smooth' });
+        <div class="card-number">編號：${formatCardNumber(c)}</div>
+      </div>).join('');
 }
-
-function copyResult() {
-  if (!selectedCards.length) {
-    alert("請先抽牌再複製！");
-    return;
-  }
-
-  const resultText = selectedCards.map((c, i) => {
-    const cardNumber = formatCardNumber(c);
-    const cardName = cardNames[cardNumber] || '';
-    const state = cardStates[i];
-    return `${cardNumber} ${cardName}（${state}）`;
-  }).join(', ');
-
-  navigator.clipboard.writeText(resultText)
-    .then(() => alert('已複製：' + resultText))
-    .catch(() => alert('複製失敗，請手動複製：' + resultText));
+function copyResult(){
+  if(!selectedCards.length){alert("請先抽牌再複製！");return;}
+  const txt=selectedCards.map(formatCardNumber).join(', ');
+  navigator.clipboard.writeText(txt).then(()=>alert('已複製：'+txt))
+      .catch(()=>alert('複製失敗，請手動複製：'+txt));
 }
-
 </script>
 </body>
-</html>
+</html> 
